@@ -90,7 +90,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>com.aws.jag.fxnodeeditor/com.aws.jag.fxnodeeditor.Main</mainClass>
+                    <mainClass>aws.WhiskeyJack.nodeviewerfx.Main</mainClass>
                 </configuration>
                 <executions>
                     <execution>
@@ -100,6 +100,7 @@
                         <configuration>
                             <options>
                                 <option>-ea</option>
+                                <option>--enable-preview</option>
                             </options>
                         </configuration>
                     </execution>
@@ -111,6 +112,7 @@
                             <options>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                                 <option>-ea</option>
+                                <option>--enable-preview</option>
                             </options>
                         </configuration>
                     </execution>
@@ -121,6 +123,7 @@
                             <options>
                                 <option>-agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                                 <option>-ea</option>
+                                <option>--enable-preview</option>
                             </options>
                         </configuration>
                     </execution>
@@ -134,6 +137,8 @@
                                 <option>${profiler.jvmargs.arg3}</option>
                                 <option>${profiler.jvmargs.arg4}</option>
                                 <option>${profiler.jvmargs.arg5}</option>
+                                <option>-ea</option>
+                                <option>--enable-preview</option>
                             </options>
                         </configuration>
                     </execution>
@@ -167,8 +172,28 @@
                     <showDeprecation>true</showDeprecation>
                     <compilerArgs>
                         <arg>--enable-preview</arg>
-                        <!--arg>-Xlint:unchecked</arg-->
                     </compilerArgs>
+                    <enableAssertions>true</enableAssertions>
+                    <archive>
+                        <manifest>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>aws.WhiskeyJack.nodeviewerfx.Main</mainClass>
+                            
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>--enable-preview</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
